@@ -15,6 +15,8 @@
 	  and ps2pdf which prevent cropping of fax pages. Thanks to all the
 	  people who contributed suggestions and patches to bug #55.
 	* scripts/capisuitefax.in: Likewise.
+	* src/backend/connection.cpp (data_b3_conf): fix behaviour when 
+	  DATA_B3_CONF comes immediately after DATA_B3_REQ
 
 2004-07-15  Gernot Hillier  <gernot@hillier.de>
 	* configure.in: support new parameter in ALERT_REQ of newer capi4linux
